DO NOT MERGE nypl harvester testing

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,9 +10,15 @@ log4j.appender.RollingAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.RollingAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.RollingAppender.layout.ConversionPattern=[%p] %d %c %M - %m%n
 
+log4j.appender.i3RollingAppender=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.i3RollingAppender.File=log/i3.log
+log4j.appender.i3RollingAppender.DatePattern='.'yyyy-MM-dd
+log4j.appender.i3RollingAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.i3RollingAppender.layout.ConversionPattern=%-5p %d [%F:%L]:  %m%n
+
 # Ingestion 3 logger
 # A FileAppender should be dynamically added to this logger
-log4j.logger.ingestion3=DEBUG, stdout
+log4j.logger.ingestion3=DEBUG, stdout, i3RollingAppender
 
 # By default, everything goes to spark.log file
 log4j.rootLogger=ERROR, RollingAppender
